--- a/client/css/scss/_variables.scss
+++ b/client/css/scss/_variables.scss
@@ -106,6 +106,15 @@ $navbar-arrow-two:#0006;
 
 $bg-color: hsl(42, 45%, 96%);
 
+// $carlfrom :#09C6F9;
+// $carlto : #045DE9;
+
+$carlfrom :#09C6F9;
+$carlto : #045DE9;
+
+
+$primary: #74b9ff;
+
 //$gradient-theme-bg: linear-gradient(315deg, #e9eaf7 0%, #f6f0ea 74%); // PICK WHITE TO LIGHT BLEU
 //$gradient-theme-bg: linear-gradient(315deg, #f1dfd1 0%, #f6f0ea 74%); // PEACH TO WHITE
 //$gradient-theme-bg: linear-gradient(315deg, #bdd4e7 0%, #8693ab 74%); // BLEU GREY DARK TO LIGHT
