--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -3,11 +3,13 @@
 /*3 COLORS THEME*/
 /*SELECTED COLORS*/
 .carl-wrapper {
+  width: 24rem;
+  height: 24rem;
   padding: 3rem;
 }
 .carl-wrapper .ring-outter {
   position: relative;
-  padding: 2rem;
+  padding: 5rem;
 }
 .carl-wrapper .ring-outter:before {
   content: "";
@@ -18,16 +20,15 @@
   bottom: 0;
   left: 0;
   right: 0;
-  box-shadow: inset 0 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2), 0.75rem -0.75rem 1.5rem #ffffff;
-  background: linear-gradient(150deg, #09C6F9, #045DE9);
+  box-shadow: inset 0 0 0.5rem 0.5rem rgba(0, 0, 0, 0.3333333333), 0.75rem -0.75rem 1.5rem #ffffff;
+  background: linear-gradient(0deg, #09C6F9, #045DE9);
   animation: rotate-gradient linear 2s infinite;
 }
 .carl-wrapper .ring-outter .ring-inner {
   position: relative;
   z-index: 10;
-  box-shadow: 0.75rem 0.75rem 1.5rem rgba(0, 0, 0, 0.4), inset 0.75rem -0.75rem 1.5rem #ffffff;
+  box-shadow: 0.75rem 0.75rem 2rem rgba(0, 0, 0, 0.4666666667), inset 0.75rem -0.75rem 1.5rem #ffffff;
   border-radius: 50%;
-  height: 8rem;
   aspect-ratio: 1;
   background-color: hsl(42deg, 45%, 96%);
 }
@@ -239,39 +240,39 @@ a.has-text-dark:hover, a.has-text-dark:focus {
 }
 
 .has-text-primary {
-  color: hsl(171deg, 100%, 41%) !important;
+  color: #74b9ff !important;
 }
 
 a.has-text-primary:hover, a.has-text-primary:focus {
-  color: #009e86 !important;
+  color: #419fff !important;
 }
 
 .has-background-primary {
-  background-color: hsl(171deg, 100%, 41%) !important;
+  background-color: #74b9ff !important;
 }
 
 .has-text-primary-light {
-  color: #ebfffc !important;
+  color: #ebf5ff !important;
 }
 
 a.has-text-primary-light:hover, a.has-text-primary-light:focus {
-  color: #b8fff4 !important;
+  color: #b8dbff !important;
 }
 
 .has-background-primary-light {
-  background-color: #ebfffc !important;
+  background-color: #ebf5ff !important;
 }
 
 .has-text-primary-dark {
-  color: #00947e !important;
+  color: #004c99 !important;
 }
 
 a.has-text-primary-dark:hover, a.has-text-primary-dark:focus {
-  color: #00c7a9 !important;
+  color: #0065cc !important;
 }
 
 .has-background-primary-dark {
-  background-color: #00947e !important;
+  background-color: #004c99 !important;
 }
 
 .has-text-link {
@@ -533,10 +534,14 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .landing-container {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.landing-container > .column {
+  padding: 4rem !important;
+}
+.landing-container > .column > input {
+  margin: auto;
 }
 
 .main-container-navbar {
@@ -703,7 +708,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .structure-row-wrapper {
   border-radius: 0.25rem;
   padding: 1rem 2rem 1rem 1rem;
-  border-left: 0.4rem solid hsl(171deg, 100%, 41%);
+  border-left: 0.4rem solid #74b9ff;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto auto;
