--- a/client/css/scss/_carl.scss
+++ b/client/css/scss/_carl.scss
@@ -1,10 +1,12 @@
 @import 'variables';
 
 .carl-wrapper{
+    width: 24rem;
+    height: 24rem;
     padding: 3rem;
     .ring-outter{
         position: relative;
-        padding: 2rem;
+        padding: 5rem;
         &:before{
             content: "";
             border-radius: 50%;
@@ -14,16 +16,15 @@
             bottom: 0;
             left: 0;
             right: 0;
-            box-shadow: inset 0 0 .5rem .5rem #0003, .75rem -.75rem 1.5rem #ffffff;
-            background: linear-gradient(150deg,#09C6F9,#045DE9);
+            box-shadow: inset 0 0 .5rem .5rem #0005, .75rem -.75rem 1.5rem #ffffff;
+            background: linear-gradient(0deg,$carlfrom,$carlto);
             animation: rotate-gradient linear 2s infinite;
         }
         .ring-inner{
             position: relative;
             z-index: 10;
-            box-shadow: .75rem .75rem 1.5rem #0006, inset .75rem -.75rem 1.5rem #ffffff;
+            box-shadow: .75rem .75rem 2rem #0007, inset .75rem -.75rem 1.5rem #ffffff;
             border-radius: 50%;
-            height: 8rem;
             aspect-ratio: 1;
             background-color: $bg-color;
         }
