--- a/client/css/bulma.scss
+++ b/client/css/bulma.scss
@@ -2,5 +2,10 @@ $dropdown-content-background-color : hsl(0deg,0%,95%);
 $dropdown-item-hover-background-color : hsl(0deg,0%,100%);
 
 $primary: #74b9ff;
+$primary-light: hsl(210, 100%, 94%);
+$primary-invert: #fff;
+$warning: #fdcb6e;
+$warning-light: hsl(39, 97%, 92%);
+$warning-invert: #0008;
 
 @import '../../node_modules/bulma/bulma.sass';
