--- a/client/css/scss/_main.scss
+++ b/client/css/scss/_main.scss
@@ -67,8 +67,8 @@ ul,li { margin:0; padding:0; }
 .text-end{
     text-align: end;
 }
-.children-spaced > *{
-    margin-bottom:1rem;
+.children-spaced > *:not(:last-child){
+    margin-bottom: 1rem !important;
 }
 .text-light p,
 .text-light h1,
