Dissociated icon style of navbar from all others, change color stripped table

--- a/client/css/bulma.scss
+++ b/client/css/bulma.scss
@@ -1,6 +1,10 @@
 $dropdown-content-background-color : hsl(0deg,0%,95%);
 $dropdown-item-hover-background-color : hsl(0deg,0%,100%);
 
+$table-striped-row-even-background-color : hsl(225,100%,96%);
+$table-row-hover-background-color : hsl(230,100%,95%);
+$table-striped-row-even-hover-background-color : hsl(230,100%,95%);
+
 $primary: #74b9ff;
 $primary-light: hsl(210, 100%, 94%);
 $primary-invert: #fff;
