--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -62,7 +62,8 @@
 }
 .font-awesome-picker .icons-preview {
   display: grid;
-  grid-template-columns: repeat(8, auto);
+  place-content: center;
+  grid-template-columns: repeat(5, auto);
   grid-template-rows: repeat(2, auto);
   width: 100%;
   margin-top: 0.75rem;
@@ -70,12 +71,19 @@
 }
 .font-awesome-picker .icons-preview .icon-tile {
   cursor: pointer;
-  font-size: 1.5rem;
-  padding: 0.25rem;
+  font-size: 1.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 3rem;
+  height: 3rem;
   border-radius: 0.25rem;
 }
 .font-awesome-picker .icons-preview .icon-tile:hover {
   background: rgba(0, 0, 0, 0.1333333333);
+}
+.font-awesome-picker .icons-preview .icon-tile .fa-light {
+  margin: 0.25rem;
 }
 .font-awesome-picker .no-result {
   grid-column-end: span 8;
@@ -572,6 +580,49 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   margin: auto;
 }
 
+.initialize-container {
+  width: 100vw;
+  max-width: 64rem;
+  padding: 1rem;
+  margin: auto;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+.initialize-container h1 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.initialize-container > .column {
+  min-width: 16rem;
+  max-width: 36rem;
+  padding: 2rem;
+  margin: auto;
+  padding: 2rem 0 !important;
+}
+.initialize-container > .column > * {
+  margin: auto;
+}
+.initialize-container > .column .inputs {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+.initialize-container > .column .inputs .steps {
+  display: flex;
+  gap: 1rem;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+.initialize-container > .column .inputs .steps .tag {
+  flex-grow: 1;
+}
+.initialize-container > .column .inputs > button {
+  flex: 1 1 50%;
+  margin: auto;
+}
+
 .main-container-navbar {
   display: block;
   height: 100%;
@@ -837,6 +888,11 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 }
 .box:not(:last-child), .panel:not(:last-child) {
   margin-bottom: 0.5rem;
+}
+
+.center-field {
+  margin: auto;
+  max-width: 24rem;
 }
 
 .column {
