More of the same

--- a/client/css/scss/_layout.scss
+++ b/client/css/scss/_layout.scss
@@ -307,7 +307,7 @@
 }
 //REUSABLE
 .modal-card-body .field{
-    margin: auto;
+    margin: 0 auto 1rem auto;
     max-width: 24rem;
 }
 .modal-card-foot{
