--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -859,7 +859,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 }
 
 .modal-card-body .field {
-  margin: auto;
+  margin: 0 auto 1rem auto;
   max-width: 24rem;
 }
 
