Recherche sur la page de crud ok

--- a/client/css/scss/_layout.scss
+++ b/client/css/scss/_layout.scss
@@ -306,7 +306,8 @@
     height: 50vh;
 }
 //REUSABLE
-.modal-card-body .field{
+.modal-card-body .field,
+.modal-card-body .row{
     margin: 0 auto 1rem auto;
     max-width: 24rem;
 }
