--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -858,7 +858,8 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   height: 50vh;
 }
 
-.modal-card-body .field {
+.modal-card-body .field,
+.modal-card-body .row {
   margin: 0 auto 1rem auto;
   max-width: 24rem;
 }
